--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -122,6 +122,16 @@
     text-align: center;
 }
 
+.peso {
+    width: 65px;
+    color: #fff;
+    background-color: #b1b0b3;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    text-align: left;
+    border-radius: 1rem;
+}
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
